--- a/src/App.css
+++ b/src/App.css
@@ -251,12 +251,15 @@ ul.p-submenu-list.p-panelmenu-root-submenu {
   border: solid #1ea97c;
   border-width: 0 0 0 6px;
   color: #1ea97c;
+  width: 120%;
 }
 .p-toast .p-toast-message.p-toast-message-info {
   background: #c6e9faf4;
   border: solid #0891cf;
   border-width: 0 0 0 6px;
   color: #044868;
+  width: 120%;
+
 }
 
 
