--- a/src/tamby.css
+++ b/src/tamby.css
@@ -3,24 +3,6 @@
     /* margin-bottom: 1%; */
 }
 
-/* .p-card {
-    border-radius: 0px;
-    background-color:red;
-    z-index:99
-
-}*/
-
-/* .p-card .p-component{
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 1rem;
-    font-weight: normal;
-    background: #1C1D45;
-}
-
-.p-card.p-component.h-full.p-0.card-custom {
-    background-color: #1C1D45;
-} */
-
 .p-button-primary {
     color: #ffffff;
     background: #59BAFF;
@@ -43,11 +25,11 @@ div.humbergeur{
     display: none;
 }
 
-@media screen and (max-width: 750px)
+@media screen and (max-width: 767px)
 {
-
-    body{
-        min-width: 250px;
+    html,body {
+        font-size: 16px;
+        zoom: 84%;
     }
     div.mobile-m{
         display: none;
@@ -64,4 +46,5 @@ div.humbergeur{
     div.gJVUZI{
         position: relative;
     }
+   
 }
