--- a/src/tamby.css
+++ b/src/tamby.css
@@ -25,6 +25,14 @@ div.humbergeur{
     display: none;
 }
 
+div#imprimable{
+    background-color: #ffffff;
+
+}
+
+table .table{
+    border: 1px solid rgb(43, 43, 43);
+}
 @media screen and (max-width: 767px)
 {
     div .mobile-m{
